log
Fri Mar 27 04:56:56 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
593994a
Fri Mar 27 05:12:02 PM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
716d255
Fri Mar 27 05:14:22 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
35ff7a9
Fri Mar 27 05:14:54 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
0381869
Fri Mar 27 05:24:10 PM UTC 2026: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
922120a
Fri Mar 27 05:29:18 PM UTC 2026: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
71f013d
Fri Mar 27 05:30:28 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
c3e534b
Fri Mar 27 05:31:24 PM UTC 2026: 
 tests:  5|4
total_score: 20/60
55f8e99
Fri Mar 27 05:52:59 PM UTC 2026: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 20/60
735000a
Fri Mar 27 06:18:15 PM UTC 2026: 
 list.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
1c25a31
Fri Mar 27 06:35:32 PM UTC 2026: 
 list.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  5|4
total_score: 20/60
7ad4a96
Sat Mar 28 05:52:03 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:109:29: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  109 |     if (list == NULL)return NULL;
      |                             ^~~~
list.c:107:6: note: declared here
  107 | void pushCurrent(List * list, void * data)
      |      ^~~~~~~~~~~
54a3033
Sat Mar 28 05:53:06 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:109:35: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
  109 |     if (list->head == NULL)return NULL;
      |                                   ^~~~
list.c:107:6: note: declared here
  107 | void pushCurrent(List * list, void * data)
      |      ^~~~~~~~~~~
5d0ffb5
Sat Mar 28 09:59:02 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
2ee2733
Mon Mar 30 12:41:53 AM UTC 2026: 
 list.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:80:9: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   80 |     if (lista->head == NULL)return;
      |         ^~~~~
      |         list
list.c:80:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:80:29: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   80 |     if (lista->head == NULL)return;
      |                             ^~~~~~
list.c:78:8: note: declared here
   78 | void * lastList(List * list)
      |        ^~~~~~~~
list.c:84:30: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   84 |     if(list->current == NULL)return;
      |                              ^~~~~~
list.c:78:8: note: declared here
   78 | void * lastList(List * list)
      |        ^~~~~~~~
list.c: In function ‘prevList’:
list.c:91:27: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   91 |     if(list->head == NULL)return;
      |                           ^~~~~~
list.c:89:8: note: declared here
   89 | void * prevList(List * list)
      |        ^~~~~~~~
list.c:95:30: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   95 |     if(list->current == NULL)return;
      |                              ^~~~~~
list.c:89:8: note: declared here
   89 | void * prevList(List * list)
      |        ^~~~~~~~
d4cd6c8
Mon Mar 30 12:43:36 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:44:12: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   44 |     return list;
      |            ^~~~
      |            List
list.c:44:12: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘lastList’:
list.c:80:28: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   80 |     if (list->head == NULL)return;
      |                            ^~~~~~
list.c:78:8: note: declared here
   78 | void * lastList(List * list)
      |        ^~~~~~~~
list.c:84:30: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   84 |     if(list->current == NULL)return;
      |                              ^~~~~~
list.c:78:8: note: declared here
   78 | void * lastList(List * list)
      |        ^~~~~~~~
list.c: In function ‘prevList’:
list.c:91:27: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   91 |     if(list->head == NULL)return;
      |                           ^~~~~~
list.c:89:8: note: declared here
   89 | void * prevList(List * list)
      |        ^~~~~~~~
list.c:95:30: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   95 |     if(list->current == NULL)return;
      |                              ^~~~~~
list.c:89:8: note: declared here
   89 | void * prevList(List * list)
      |        ^~~~~~~~
list.c: In function ‘createList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
d35c6d0
Mon Mar 30 12:46:30 AM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:80:28: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   80 |     if (list->head == NULL)return;
      |                            ^~~~~~
list.c:78:8: note: declared here
   78 | void * lastList(List * list)
      |        ^~~~~~~~
list.c:84:30: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   84 |     if(list->current == NULL)return;
      |                              ^~~~~~
list.c:78:8: note: declared here
   78 | void * lastList(List * list)
      |        ^~~~~~~~
list.c: In function ‘prevList’:
list.c:91:27: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   91 |     if(list->head == NULL)return;
      |                           ^~~~~~
list.c:89:8: note: declared here
   89 | void * prevList(List * list)
      |        ^~~~~~~~
list.c:95:30: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   95 |     if(list->current == NULL)return;
      |                              ^~~~~~
list.c:89:8: note: declared here
   89 | void * prevList(List * list)
      |        ^~~~~~~~
52e9a58
Mon Mar 30 12:48:54 AM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
1b37f52
Mon Mar 30 12:56:17 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 40/60
c847ac6
Mon Mar 30 01:02:35 AM UTC 2026: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:106:5: error: unknown type name ‘node’; did you mean ‘Node’?
  106 |     node* nuevo = createNode(data);
      |     ^~~~
      |     Node
list.c:106:19: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
  106 |     node* nuevo = createNode(data);
      |                   ^~~~~~~~~~
list.c:110:20: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  110 |         list->head = nuevo;
      |                    ^
list.c:111:20: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  111 |         list->tail = nuevo;
      |                    ^
list.c:112:23: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  112 |         list->current = nuevo;
      |                       ^
list.c:116:10: error: request for member ‘next’ in something not a structure or union
  116 |     nuevo->next = list->head;
      |          ^~
list.c:117:22: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  117 |     list->head->prev = nuevo;
      |                      ^
list.c:118:16: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  118 |     list->head = nuevo;
      |                ^
41ddc85
Mon Mar 30 01:03:35 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 50/60
78617f8
Mon Mar 30 01:29:53 AM UTC 2026: 
 list.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  0|0
ff8a451
Mon Mar 30 01:33:36 AM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
59c6c3b
Mon Mar 30 01:36:19 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6872e1b
